--- a/index.html
+++ b/index.html
@@ -1,10 +1,65 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="preload"
+      as="image"
+      href="https://www.ulcdn.net/media/furniture-stores/patna/bailey-road/patna-bailey-road-773X413.jpg?1704365790"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://cdn.panhomestores.com/cdn-cgi/image/width=635,quality=60,%20format=auto,%20dpr=2/media/scandiweb/slider/b/e/bedroom_2.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/djthgkd4e/image/upload/v1738571720/sofa_dzyjvs.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/djthgkd4e/image/upload/v1738571807/living_mqfs3l.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/djthgkd4e/image/upload/v1738572749/dining_kpgwyz.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/djthgkd4e/image/upload/v1738571807/living_mqfs3l.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://res.cloudinary.com/djthgkd4e/image/upload/v1738218273/Kids_n_Teens_3_1_wbgh9e.avif"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://as2.ftcdn.net/jpg/05/84/04/65/1000_F_584046587_sX9zY6b5SyYQP7b2MTcxhJf4E3yfvDSW.jpg"
+    />
+    <link
+      rel="preload"
+      as="image"
+      href="https://png.pngtree.com/thumb_back/fh260/background/20230614/pngtree-traditional-outdoor-patio-furniture-set-image_2972138.jpg"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <!-- <style>
+      body::before {
+        content: "";
+        position: fixed;
+        inset: 0;
+        z-index: -1;
+        background: #f2f2f2 url("https://www.ulcdn.net/media/furniture-stores/patna/bailey-road/patna-bailey-road-773X413.jpg?1704365790")
+          center center / cover no-repeat;
+      }
+    </style> -->
   </head>
   <body>
     <div id="root"></div>
